# KCC

./: .gitignore  CONTEXT.md  DESIGN.md  README.md  RUN_ON_MAC.md
apps/api/: README.md  pyproject.toml
apps/api/migrations/: 0001_init.sql  0002_outbox.sql  README.md
apps/api/scripts/: kyc_sandbox.py  run_test_mode.sh
apps/api/src/alos_api/: config.py  context.py  deps.py  main.py
apps/api/src/alos_api/contexts/application/: aggregate.py  api.py  service.py
apps/api/src/alos_api/contexts/assessment/: __init__.py  api.py
apps/api/src/alos_api/contexts/credit_memo/: __init__.py  agent.py  api.py  provider.py  template.py
apps/api/src/alos_api/contexts/disbursement/: __init__.py  api.py  reconciliation.py  service.py
apps/api/src/alos_api/contexts/documentation/: __init__.py  api.py  service.py
apps/api/src/alos_api/contexts/underwriting/: __init__.py  agents.py
apps/api/src/alos_api/integrations/: __init__.py  base.py  cbs.py  documents.py  kyc.py
apps/api/src/alos_api/platform/: __init__.py  audit.py  db.py  events.py  idempotency.py  makerchecker.py  outbox.py  pg_audit.py  pg_events.py  tenancy.py  workflow.py
apps/api/tests/: conftest.py  test_bypass.py  test_credit_memo.py  test_end_to_end.py  test_kyc_contract.py  test_multi_product.py  test_outbox.py  test_postgres_rls.py  test_underwriting.py  test_walking_skeleton.py
docs/: 00-gap-analysis.md  01-architecture-method.md  02-domain-model.md  03-system-architecture.md  05-ai-architecture.md  06-security-compliance.md  07-roadmap.md
prompts/: ALOS_Master_Prompt_v1_original.md  (+1 more)
(+11 files in other folders)
