[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alos-api"
version = "0.1.0"
description = "ALOS modular-monolith API (KCC MVP walking skeleton)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "alos-eligibility",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
